# ai-interviewer

./: README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  status.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: config.py  database.py  main.py
backend/app/agents/: answer_evaluation.py  integrity_judgment.py  message_classification.py  question_generation.py  report_generation.py  validators.py
backend/app/api/: __init__.py  auth.py  chat.py  dependencies.py  interviews.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  interview.py  message.py
backend/app/schemas/: __init__.py  interview.py  message.py
backend/app/services/: __init__.py  interview_service.py  message_service.py
backend/app/utils/: auth.py  file_upload.py  state_machine.py
backend/tests/: conftest.py  test_api.py
backend/tests/e2e/: test_interview_flow.py
backend/tests/integration/: test_api_costs.py
backend/tests/unit/: test_answer_evaluation_agent.py  test_cache.py  test_cost_tracker.py  test_integrity_judgment_agent.py  test_message_classification_agent.py  test_question_generation_agent.py  test_report_generation_agent.py  test_validators.py
docs/: README.md  api_testing.md  architecture_review.md  code_review.md  dependencies.md  implementation_notes.md  k3s_deployment.md  phase5_progress.md  python_version_fix.md  setup.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  (+4 more)
(+28 files in other folders)
